--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v3
       
     - name: Set lowercase repo name
-      run: echo "REPO_NAME=${{ github.repository }}".lower() >> $GITHUB_ENV
+      run: echo "REPO_NAME=${{ github.repository }}" | tr '[:upper:]' '[:lower:]' >> $GITHUB_ENV
       
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
@@ -27,7 +27,7 @@ jobs:
       run: dotnet test --no-restore
 
     - name: Build Docker image
-      run: docker build -t ${{ env.REPO_NAME }}:${{ github.sha }} .
+      run: docker build -t ${{ env.repo_name }}:${{ github.sha }} .
 
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v2
@@ -37,7 +37,7 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Push Docker image to GitHub Container Registry
-      run: docker push ${{ env.REPO_NAME }}:${{ github.sha }}
+      run: docker push ${{ env.repo_name }}:${{ github.sha }}
 
     - name: Clean up post-run
-      run: docker rmi ${{ env.REPO_NAME }}:${{ github.sha }}
+      run: docker rmi ${{ env.repo_name }}:${{ github.sha }}
