--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+
+    - name: Extract version number
+      id: vars
+      run: echo "::set-output name=version::1.0.${{ github.run_number }}"
       
     - name: Set lowercase repo name
       run: echo "REPO_NAME=${{ github.repository }}" | tr '[:upper:]' '[:lower:]' >> $GITHUB_ENV
@@ -27,17 +31,16 @@ jobs:
       run: dotnet test --no-restore
 
     - name: Build Docker image
-      run: docker build -t ${{ env.repo_name }}:${{ github.sha }} ./ClubDoorman
+      run: docker build -t ${{ env.REPO_NAME }}:latest -t ${{ env.REPO_NAME }}:${{ steps.vars.outputs.version }} ./ClubDoorman
 
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        password: ${{ secrets.CR_PAT }}
 
     - name: Push Docker image to GitHub Container Registry
-      run: docker push ${{ env.repo_name }}:${{ github.sha }}
-
-    - name: Clean up post-run
-      run: docker rmi ${{ env.repo_name }}:${{ github.sha }}
+      run: |
+        docker push ${{ env.REPO_NAME }}:latest
+        docker push ${{ env.REPO_NAME }}:${{ steps.vars.outputs.version }}
