--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+_name: Build and Push Docker Image
 
 on:
   push:
@@ -17,7 +17,7 @@ jobs:
       run: echo "::set-output name=version::1.0.${{ github.run_number }}"
       
     - name: Set lowercase repo name
-      run: echo "REPO_NAME=${{ github.repository }}" | tr '[:upper:]' '[:lower:]' >> $GITHUB_ENV
+      run: echo "repo_name=${{ github.repository }}" | tr '[:upper:]' '[:lower:]' >> $GITHUB_ENV
       
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
@@ -31,7 +31,7 @@ jobs:
       run: dotnet test --no-restore
 
     - name: Build Docker image
-      run: docker build -t ${{ env.REPO_NAME }}:latest -t ${{ env.REPO_NAME }}:${{ steps.vars.outputs.version }} ./ClubDoorman
+      run: docker build -t ${{ env.repo_name }}:latest -t ${{ env.repo_name }}:${{ steps.vars.outputs.version }} ./ClubDoorman
 
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v2
@@ -42,5 +42,5 @@ jobs:
 
     - name: Push Docker image to GitHub Container Registry
       run: |
-        docker push ${{ env.REPO_NAME }}:latest
-        docker push ${{ env.REPO_NAME }}:${{ steps.vars.outputs.version }}
+        docker push ${{ env.repo_name }}:latest
+        docker push ${{ env.repo_name }}:${{ steps.vars.outputs.version }}
