--- a/ClubDoorman/ClubDoorman.csproj
+++ b/ClubDoorman/ClubDoorman.csproj
@@ -22,4 +22,10 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
     <PackageReference Include="Telegram.Bot" Version="19.0.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <None Update="data\*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
 </Project>
