--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -1,12 +1,14 @@
 services:
   doorman:
-    image: ghcr.io/tiraelsedai/clubdoorman:latest
+    image: ghcr.io/momai/clubdoorman:latest
     container_name: doorman
     environment:
       - TZ=Europe/Moscow
       - DOORMAN_CLUB_SERVICE_TOKEN=${DOORMAN_CLUB_SERVICE_TOKEN}
       - DOORMAN_BOT_API=${DOORMAN_BOT_API}
       - DOORMAN_ADMIN_CHAT=${DOORMAN_ADMIN_CHAT}
+      - DOORMAN_BLACKLIST_AUTOBAN_DISABLE=${DOORMAN_BLACKLIST_AUTOBAN_DISABLE}
+      - DOORMAN_LOW_CONFIDENCE_HAM_ENABLE=${DOORMAN_LOW_CONFIDENCE_HAM_ENABLE}
     volumes:
-      - /home/tirael/clubdoorman/data:/app/data
+      - ./ClubDoorman/data:/app/data
     restart: unless-stopped
