--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -34,8 +34,13 @@ jobs:
     - name: Publish application
       run: dotnet publish ClubDoorman/ClubDoorman.csproj -c Release -o publish
 
-    - name: Create zip artifact
-      run: zip -r GateTroitsBot-${{ steps.vars.outputs.version }}.zip publish
+    - name: Get Build Info
+      id: build_info
+      run: |
+        echo "date=$(date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_OUTPUT
+        echo "commit=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+        echo "branch=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_OUTPUT
+        echo "author=$(git log -1 --pretty=format:'%an')" >> $GITHUB_OUTPUT
 
     - name: Create Release
       id: create_release
@@ -46,8 +51,30 @@ jobs:
         body: |
           ## GateTroitsBot v${{ steps.vars.outputs.version }}
           
-          Docker image: `ghcr.io/${{ env.repo_name }}:${{ steps.vars.outputs.version }}`
-        files: GateTroitsBot-${{ steps.vars.outputs.version }}.zip
+          **Сборка:**
+          - Дата: ${{ steps.build_info.outputs.date }}
+          - Ветка: ${{ steps.build_info.outputs.branch }}
+          - Коммит: ${{ steps.build_info.outputs.commit }}
+          - Автор: ${{ steps.build_info.outputs.author }}
+          
+          **Docker образ:** 
+          ```
+          ghcr.io/${{ env.repo_name }}:${{ steps.vars.outputs.version }}
+          ```
+          
+          **Запуск через Docker Compose:**
+          ```yaml
+          version: '3'
+          services:
+            doorman:
+              image: ghcr.io/${{ env.repo_name }}:${{ steps.vars.outputs.version }}
+              restart: always
+              volumes:
+                - ./data:/app/data
+              environment:
+                - DOORMAN_BOT_API=1234567890:AAAA-YOUR-TOKEN-HERE
+                - DOORMAN_ADMIN_CHAT=-1001234567890
+          ```
         draft: false
         prerelease: false
       env:
