--- a/ClubDoorman/ClubDoorman.csproj
+++ b/ClubDoorman/ClubDoorman.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Hybrid" Version="9.4.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
     <PackageReference Include="Microsoft.ML" Version="4.0.2" />
+    <PackageReference Include="NsfwSpy" Version="3.5.0" />
     <PackageReference Include="Polly" Version="8.5.2" />
     <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
