--- a/ClubDoorman/ClubDoorman.csproj
+++ b/ClubDoorman/ClubDoorman.csproj
@@ -19,13 +19,14 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Hybrid" Version="9.4.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.4" />
     <PackageReference Include="Microsoft.ML" Version="4.0.2" />
-    <PackageReference Include="NsfwSpy" Version="3.5.0" />
+    <PackageReference Include="NsfwONNX" Version="1.0.6.1" />
     <PackageReference Include="Polly" Version="8.5.2" />
     <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.1" />
     <PackageReference Include="Serilog.Sinks.Async" Version="2.1.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.8" />
     <PackageReference Include="System.Runtime.Caching" Version="9.0.4" />
     <PackageReference Include="Telegram.Bot" Version="22.5.1" />
     <PackageReference Include="tryAGI.OpenAI" Version="4.2.0" />
