add blacklist group

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,4 @@ DOORMAN_BOT_API=1234
 DOORMAN_ADMIN_CHAT=-1234
 DOORMAN_BLACKLIST_AUTOBAN_DISABLE=1
 DOORMAN_LOW_CONFIDENCE_HAM_ENABLE=1
+DOORMAN_DISABLED_CHATS=-1234567,-1234123
