--- a/ClubDoorman/ClubDoorman.csproj
+++ b/ClubDoorman/ClubDoorman.csproj
@@ -22,6 +22,11 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="System.Runtime.Caching" Version="9.0.4" />
     <PackageReference Include="Telegram.Bot" Version="22.4.4" />
+    <!-- AI проверки профилей -->
+    <PackageReference Include="tryAGI.OpenAI" Version="4.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Hybrid" Version="9.5.0" />
+    <PackageReference Include="Polly" Version="8.5.2" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.9" />
   </ItemGroup>
 
   <ItemGroup>
