--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,32 +2,33 @@ name: Build, Release and Push Docker Image
 
 on:
   push:
-    branches: [ develop ]
+    branches: [ next ]
 
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v3
 
     - name: Extract version number
       id: vars
-      run: echo "version=1.0.${{ github.run_number }}" >> $GITHUB_OUTPUT
-      
+      run: echo "version=2.0.${{ github.run_number }}" >> $GITHUB_OUTPUT
+
     - name: Set lowercase repo name
       run: echo "repo_name=${{ github.repository }}" | tr '[:upper:]' '[:lower:]' >> $GITHUB_ENV
-      
+
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: '9.0.x' # Specify your .NET version here
+        dotnet-version: '9.0.x'
 
     - name: Restore dependencies
       run: dotnet restore
 
     - name: Build application
       run: dotnet build --configuration Release --no-restore
-      
+
     - name: Run tests
       run: dotnet test --no-restore
 
@@ -43,22 +44,21 @@ jobs:
         echo "author=$(git log -1 --pretty=format:'%an')" >> $GITHUB_OUTPUT
 
     - name: Create Release
-      id: create_release
       uses: softprops/action-gh-release@v1
       with:
         tag_name: v${{ steps.vars.outputs.version }}
         name: Release v${{ steps.vars.outputs.version }}
         body: |
           ## GateTroitsBot v${{ steps.vars.outputs.version }}
-          
+
           **Сборка:**
           - Коммит: ${{ steps.build_info.outputs.commit }}
-          
+
           **Docker образ:** 
           ```
           ghcr.io/${{ env.repo_name }}:${{ steps.vars.outputs.version }}
           ```
-          
+
           **Запуск через Docker Compose:**
           ```yaml
           version: '3'
@@ -72,17 +72,20 @@ jobs:
                 - DOORMAN_BOT_API=1234567890:AAAA-YOUR-TOKEN-HERE
                 - DOORMAN_ADMIN_CHAT=-1001234567890
           ```
-          
+
           **Документация:**
-          🔗 [Инструкция по использованию бота](https://telegra.ph/GateTroitsBot-04-19) - всё о настройке, возможностях и рекомендациях
+          🔗 [Инструкция по использованию бота](https://telegra.ph/GateTroitsBot-04-19)
         draft: false
         prerelease: false
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build Docker image
-      run: docker build -t ghcr.io/${{ env.repo_name }}:latest -t ghcr.io/${{ env.repo_name }}:${{ steps.vars.outputs.version }} ./ClubDoorman
-      
+      run: |
+        docker build -t ghcr.io/${{ env.repo_name }}:latest \
+                     -t ghcr.io/${{ env.repo_name }}:${{ steps.vars.outputs.version }} \
+                     ./ClubDoorman
+
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v2
       with:
