--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,36 @@
+# Основные настройки
 DOORMAN_CLUB_SERVICE_TOKEN=
 DOORMAN_BOT_API=1234
 DOORMAN_ADMIN_CHAT=-1234
+
+# Настройки автобана
 DOORMAN_BLACKLIST_AUTOBAN_DISABLE=1
 DOORMAN_LOW_CONFIDENCE_HAM_ENABLE=1
+DOORMAN_CHANNELS_AUTOBAN_DISABLE=1
+
+# Логирование
+DOORMAN_LOG_ADMIN_CHAT=-1234
+
+# Отключенные чаты
 DOORMAN_DISABLED_CHATS=-1234567,-1234123
+
+# Группы без VPN рекламы
+NO_VPN_AD_GROUPS=-1002447377369,-1001755881475,-1001481929487,-1002393592376,-1001444430646,-1001756182053
+
+# AI настройки
+DOORMAN_OPENROUTER_API=sk-or-v1-your-api-key
+DOORMAN_AI_ENABLED_CHATS=
+
+# Белый список чатов (если пусто - бот работает везде)
+DOORMAN_WHITELIST=
+
+# Тестовые ID для черного списка
+#DOORMAN_TEST_BLACKLIST_IDS=7203769455
+
+# Новая система одобрения
+DOORMAN_USE_NEW_APPROVAL_SYSTEM=true
+DOORMAN_GROUP_APPROVAL_MODE=true
+
+# Фильтрация медиа
+DOORMAN_DISABLE_MEDIA_FILTERING=true
+#DOORMAN_MEDIA_FILTERING_DISABLED_CHATS=
