--- a/ClubDoorman.Test/ClubDoorman.Test.csproj
+++ b/ClubDoorman.Test/ClubDoorman.Test.csproj
@@ -36,6 +36,8 @@
         <Exec Command="cp -n &quot;$(SolutionDir)ClubDoorman/data/stop-words.txt&quot; &quot;$(TargetDir)data/stop-words.txt&quot;" Condition="'$(OS)' != 'Windows_NT'" />
         <Exec Command="if not exist &quot;$(TargetDir)data&quot; mkdir &quot;$(TargetDir)data&quot;" Condition="'$(OS)' == 'Windows_NT'" />
         <Exec Command="copy &quot;$(SolutionDir)ClubDoorman\\data\\stop-words.txt&quot; &quot;$(TargetDir)data\\stop-words.txt&quot;" Condition="'$(OS)' == 'Windows_NT'" />
+        <Exec Command="cp -n &quot;$(ProjectDir)test-timeouts.json&quot; &quot;$(TargetDir)test-timeouts.json&quot;" Condition="'$(OS)' != 'Windows_NT'" />
+        <Exec Command="copy &quot;$(ProjectDir)test-timeouts.json&quot; &quot;$(TargetDir)test-timeouts.json&quot;" Condition="'$(OS)' == 'Windows_NT'" />
     </Target>
 
 </Project>
