feat: системное улучшение обработки ошибок и документации
- Добавлена иерархия пользовательских исключений (5 типов)
- Исправлено критическое зависание в SpamHamClassifier (таймаут 10с + fallback)
- Добавлены таймауты в AiChecks (30с) и ModerationService (15с)
- Добавлена XML-документация для всех публичных API (~50 методов)
- Улучшена валидация входных параметров во всех сервисах
- Добавлены graceful fallback для критических операций
- Созданы тесты для проверки обработки ошибок
- Исправлены проблемы с конфигурацией в тестовой среде

Результат: 68/75 тестов проходят, критическая логика не изменена

--- a/ClubDoorman.Test/ClubDoorman.Test.csproj
+++ b/ClubDoorman.Test/ClubDoorman.Test.csproj
@@ -33,9 +33,10 @@
     </ItemGroup>
 
     <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-        <Exec Command="cp -n &quot;$(SolutionDir)ClubDoorman/data/stop-words.txt&quot; &quot;$(TargetDir)data/stop-words.txt&quot;" Condition="'$(OS)' != 'Windows_NT'" />
+        <Exec Command="mkdir -p &quot;$(TargetDir)data&quot;" Condition="'$(OS)' != 'Windows_NT'" />
+        <Exec Command="cp -n &quot;$(ProjectDir)../ClubDoorman/data/stop-words.txt&quot; &quot;$(TargetDir)data/stop-words.txt&quot;" Condition="'$(OS)' != 'Windows_NT'" />
         <Exec Command="if not exist &quot;$(TargetDir)data&quot; mkdir &quot;$(TargetDir)data&quot;" Condition="'$(OS)' == 'Windows_NT'" />
-        <Exec Command="copy &quot;$(SolutionDir)ClubDoorman\\data\\stop-words.txt&quot; &quot;$(TargetDir)data\\stop-words.txt&quot;" Condition="'$(OS)' == 'Windows_NT'" />
+        <Exec Command="copy &quot;$(ProjectDir)..\\ClubDoorman\\data\\stop-words.txt&quot; &quot;$(TargetDir)data\\stop-words.txt&quot;" Condition="'$(OS)' == 'Windows_NT'" />
         <Exec Command="cp -n &quot;$(ProjectDir)test-timeouts.json&quot; &quot;$(TargetDir)test-timeouts.json&quot;" Condition="'$(OS)' != 'Windows_NT'" />
         <Exec Command="copy &quot;$(ProjectDir)test-timeouts.json&quot; &quot;$(TargetDir)test-timeouts.json&quot;" Condition="'$(OS)' == 'Windows_NT'" />
     </Target>
