feat: Add comprehensive TDD testing infrastructure and documentation
- Add modular TestFactory generator documentation
- Create TDD testing strategy plan with mutation testing
- Implement test data factory with domain model support
- Add base test class with common utilities
- Create example unit tests for SpamHamClassifier
- Add flexible test execution shell script
- Update .gitignore to exclude test plans folder

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,22 @@
 ClubDoorman/ClubDoorman.csproj.user
 /tmp/
 /plans/
+
+# Test artifacts
+ClubDoorman.Test/TestResults/
+ClubDoorman.Test/StrykerOutput/
+ClubDoorman.Test/coverage/
+ClubDoorman.Test/TestData/temp/
+ClubDoorman.Test/Performance/results/
+ClubDoorman.Test/Mutation/results/
+
+# Test logs
+*.test.log
+test-results.xml
+coverage.xml
+mutation-report.html
+
+# Temporary test files
+*.tmp
+*.temp
+test-*.json
