--- a/ClubDoorman.Test/ClubDoorman.Test.csproj
+++ b/ClubDoorman.Test/ClubDoorman.Test.csproj
@@ -7,6 +7,8 @@
         <InvariantGlobalization>false</InvariantGlobalization>
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
+        <RunTestsInParallel>true</RunTestsInParallel>
+        <MaxCpuCount>4</MaxCpuCount>
     </PropertyGroup>
 
     <ItemGroup>
