--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -78,7 +78,8 @@ jobs:
         chmod 600 ~/.ssh/id_rsa
         ssh-keyscan -t rsa $SERVER_IP >> ~/.ssh/known_hosts
         ssh -o StrictHostKeyChecking=no $SSH_USER@$SERVER_IP "
-          docker pull ghcr.io/${{ env.repo_name }}:dev &&
+          docker-compose -f /root/Spampyre/docker-compose.yml pull &&
+          docker-compose -f /root/Spampyre/docker-compose.yml down &&
           docker-compose -f /root/Spampyre/docker-compose.yml up -d
         "
       env:
