security: удален реальный токен бота из репозитория
🚨 КРИТИЧЕСКАЯ БЕЗОПАСНОСТЬ: Удален файл test_bot.sh с реальным токеном бота
- Удален test_bot.sh из git истории
- Добавлен test_bot.sh.example с placeholder'ами
- Обновлен .gitignore для предотвращения коммита токенов
- Добавлены правила для *.env, secrets.*, tokens.*

⚠️  ВАЖНО: Токен был в публичном репозитории - рекомендуется сменить токен бота!

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,9 @@ mutation-report.html
 *.tmp
 *.temp
 test-*.jsonscripts/test_factory_generator/__pycache__/
+
+# Security - never commit real tokens
+test_bot.sh
+*.env
+secrets.*
+tokens.*
