--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,11 @@
-name: Build and deploy Spampyre DEVELOPMENT
+name: Deploy - Build and Push Docker
 
 on:
   push:
     branches: [ next-dev ]
-  pull_request:
-    branches: [ next-dev ]
 
 jobs:
-  build-and-deploy-test:
+  deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -31,55 +29,30 @@ jobs:
     - name: Build application
       run: dotnet build --configuration Release --no-restore
 
-    - name: Run tests
-      run: dotnet test --no-restore
-
     - name: Publish application
       run: dotnet publish ClubDoorman/ClubDoorman.csproj -c Release -o publish
 
-    - name: Get Build Info
-      id: build_info
-      run: |
-        echo "date=$(date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_OUTPUT
-        echo "commit=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-        echo "branch=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_OUTPUT
-        echo "author=$(git log -1 --pretty=format:'%an')" >> $GITHUB_OUTPUT
-
-    # Удалён шаг Create Release, чтобы не создавать релиз на GitHub
-
     - name: Build Docker image
-      if: github.event_name == 'push'
       run: |
         docker build -t ghcr.io/${{ env.repo_name }}:latest \
                      -t ghcr.io/${{ env.repo_name }}:${{ steps.vars.outputs.version }} \
                      ./ClubDoorman
 
     - name: Log in to GitHub Container Registry
-      if: github.event_name == 'push'
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Push Docker image to GitHub Container Registry
-      if: github.event_name == 'push'
+    - name: Push Docker image
       run: |
         docker push ghcr.io/${{ env.repo_name }}:latest
         docker push ghcr.io/${{ env.repo_name }}:${{ steps.vars.outputs.version }}
-
-    - name: Tag Docker image as dev
-      if: github.event_name == 'push'
-      run: |
         docker tag ghcr.io/${{ env.repo_name }}:latest ghcr.io/${{ env.repo_name }}:dev
-
-    - name: Push Docker image with dev tag
-      if: github.event_name == 'push'
-      run: |
         docker push ghcr.io/${{ env.repo_name }}:dev
 
     - name: SSH and Update Container
-      if: github.event_name == 'push'
       run: |
         mkdir -p ~/.ssh/
         echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
@@ -96,8 +69,6 @@ jobs:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
     - name: Get Docker logs from server
-      if: github.event_name == 'push'
-      id: get_logs
       run: |
         mkdir -p ~/.ssh/
         echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
@@ -110,14 +81,12 @@ jobs:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
     - name: Upload logs as artifact
-      if: github.event_name == 'push'
       uses: actions/upload-artifact@v4
       with:
         name: spampyre-logs
         path: spampyre_logs.txt
 
     - name: Add logs to summary
-      if: github.event_name == 'push'
       run: |
         echo '### Последние логи контейнера spampyre' >> $GITHUB_STEP_SUMMARY
         echo '<details><summary>Показать логи</summary>' >> $GITHUB_STEP_SUMMARY
