--- a/ClubDoorman/data/chat_settings.json
+++ b/ClubDoorman/data/chat_settings.json
@@ -1,4 +1,20 @@
 {
-  "-1001234567890": { "type": "announcement" },
-  "-1009876543210": { "type": "default" }
-} 
+  "-1001234567890": {
+    "type": "announcement"
+  },
+  "-1009876543210": {
+    "type": "default"
+  },
+  "306157325": {
+    "type": "default",
+    "title": ""
+  },
+  "-4743852353": {
+    "type": "default",
+    "title": "test_group_001"
+  },
+  "-1002867169174": {
+    "type": "default",
+    "title": "test_group_001"
+  }
+}
