fix: исправлен парсинг переменных окружения и добавлена отладочная информация
- Исправлен парсинг DOORMAN_MIMICRY_THRESHOLD с использованием InvariantCulture
- Добавлена подробная отладочная информация о загруженных переменных окружения
- Создана документация LOG_CHAT_SETUP.md для настройки лог-чата
- Очищены файлы данных (approved_users_groups.json, global_stats.json, suspicious_users.json)
- Порог мимикрии теперь корректно загружается из .env (0.6 вместо 0.7)
- Безопасный вывод конфиденциальных данных (токены показываются как 'найдено/не найдено')

--- a/ClubDoorman/data/chat_settings.json
+++ b/ClubDoorman/data/chat_settings.json
@@ -16,5 +16,13 @@
   "-1002867169174": {
     "type": "default",
     "title": "test_group_001"
+  },
+  "-1002584726598": {
+    "type": "default",
+    "title": "test_c#_bot"
+  },
+  "-4881744366": {
+    "type": "default",
+    "title": "test_c#_bot"
   }
 }
