feat: add buttons to DeleteAndReportMessage and fix message text
- Change AutoBan template text from 'Авто-бан' to 'Сообщение удалено'
- Add inline keyboard buttons (🤖 бан, 😶 пропуск, 🥰 свой) to DeleteAndReportMessage
- Reuse existing button logic from suspicious message handling
- Send message with buttons directly instead of using ForwardToAdminWithNotificationAsync
- Remove debug logs that were added for troubleshooting

--- a/ClubDoorman/appsettings.json
+++ b/ClubDoorman/appsettings.json
@@ -4,5 +4,80 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "LoggingConfiguration": {
+    "FileLogging": {
+      "Enabled": true,
+      "MainLogPath": "logs/clubdoorman-.log",
+      "ErrorLogPath": "logs/errors-.log",
+      "SystemLogPath": "logs/system-.log",
+      "UserFlowLogPath": "logs/userflow-.log",
+      "RetentionDays": 7,
+      "ErrorRetentionDays": 30,
+      "SystemRetentionDays": 14,
+      "UserFlowRetentionDays": 7
+    },
+    "TelegramNotifications": {
+      "Enabled": true,
+      "AdminNotifications": true,
+      "LogNotifications": true,
+      "UserNotifications": true,
+      "NotificationTypes": {
+        "AdminNotifications": {
+          "AutoBan": "AdminChat,LogChat,FileLog",
+          "AutoBanBlacklist": "AdminChat,LogChat,FileLog",
+          "SuspiciousUser": "AdminChat,FileLog",
+          "AiProfileAnalysis": "AdminChat,FileLog",
+          "SystemError": "AdminChat,LogChat,FileLog",
+          "ChannelMessage": "AdminChat,LogChat,FileLog",
+          "UserCleanup": "AdminChat,FileLog",
+          "UserApproved": "AdminChat,FileLog",
+          "UserRestricted": "AdminChat,FileLog",
+          "UserRemovedFromApproved": "AdminChat,FileLog",
+          "AiDetectAutoDelete": "AdminChat,FileLog",
+          "AiDetectSuspicious": "AdminChat,FileLog",
+          "PrivateChatBanAttempt": "AdminChat,FileLog",
+          "BanForLongName": "AdminChat,LogChat,FileLog",
+          "BanChannel": "AdminChat,LogChat,FileLog",
+          "ChannelError": "AdminChat,FileLog",
+          "ModerationError": "AdminChat,FileLog",
+          "SuspiciousMessage": "AdminChat,FileLog",
+          "RemovedFromApproved": "AdminChat,FileLog",
+          "SystemInfo": "AdminChat,FileLog",
+          "Success": "AdminChat,FileLog",
+          "Warning": "AdminChat,FileLog"
+        },
+        "LogNotifications": {
+          "AutoBanBlacklist": "LogChat,FileLog",
+          "AutoBanFromBlacklist": "LogChat,FileLog",
+          "BanForLongName": "LogChat,FileLog",
+          "BanChannel": "LogChat,FileLog",
+          "SuspiciousUser": "LogChat,FileLog",
+          "AiProfileAnalysis": "LogChat,FileLog",
+          "CriticalError": "LogChat,FileLog",
+          "ChannelMessage": "LogChat,FileLog"
+        },
+        "UserNotifications": {
+          "ModerationWarning": "UserChat,UserFlowLog",
+          "MessageDeleted": "UserChat,UserFlowLog",
+          "UserBanned": "UserChat,UserFlowLog",
+          "UserRestricted": "UserChat,UserFlowLog",
+          "CaptchaShown": "UserChat,UserFlowLog",
+          "Welcome": "UserChat,UserFlowLog",
+          "Warning": "UserChat,UserFlowLog",
+          "Success": "UserChat,UserFlowLog",
+          "SystemInfo": "UserChat,UserFlowLog",
+          "CaptchaWelcome": "UserChat,UserFlowLog"
+        }
+      }
+    },
+    "Categories": {
+      "SystemEvents": true,
+      "UserActions": true,
+      "Moderation": true,
+      "AiEvents": true,
+      "Statistics": true,
+      "Errors": true
+    }
   }
 }
