--- a/ClubDoorman/data/chat_settings.json
+++ b/ClubDoorman/data/chat_settings.json
@@ -19,10 +19,14 @@
   },
   "-1002584726598": {
     "type": "default",
-    "title": "test_c#_bot"
+    "title": "Test_c#_bot_Admin"
   },
   "-4881744366": {
     "type": "default",
     "title": "test_c#_bot"
+  },
+  "-4829729373": {
+    "type": "default",
+    "title": "test_c#_bot_Log"
   }
 }
