--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,10 @@ test-results.xml
 coverage.xml
 mutation-report.html
 
+# Application logs
+ClubDoorman/logs/
+*.log
+
 # Temporary test files
 *.tmp
 *.temp
